--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <div id="std">
     <h2>studio</h2>
     <div id="stdi">
-         <video autoplay  controls>
+         <video controls>
               <source src="/videos/amestd.mp4" type="video/mp4">
              
               </source>
