full  update both on javascript,html,css and images file
check previous codes and contrast

--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
   
      <div id="pichold">
      <img src="/images/amestd0.jpg"></img>
+     <div id="buybox"><h2>purchase</h2></div>
      <div id="buy"></div>
      <h3>AGED</h3>
      <h4>2018<br>
@@ -79,6 +80,7 @@
    
      <div id="pichold1">
      <img src="/images/amestd1.jpg"></img>
+     <div id="buybox1"><h2>purchase</h2></div>
      <div id="buy"></div>
      <h3>MY AFRICAN WOMAN</h3>
      <h4>2017<br>
@@ -107,6 +109,7 @@
      
      <div id="pichold2">
      <img src="/images/amestd2.jpg"></img>
+     <div id="buybox2"><h2>bought</h2></div>
      <div id="buy"></div>
      <h3>SELF TORTURE</h3>
      <h4>2018<br>
@@ -125,6 +128,7 @@
      
      <div id="pichold3">
      <img src="/images/amestd3.jpg"></img>
+     <div id="buybox3"><h2>purchase</h2></div>
      <div id="buy"></div>
      <h3>SOME WORDS ARE NOISE</h3>
      <h4>2019<br>
@@ -153,7 +157,16 @@
      </nav>
  </div>
  
- 
+<div id="lastbar">
+<h6 id="h61">2020 copyright <b>.c</b> Ameh Egwuh</h6>
+<h6 id="h62"> site by <a href="http://bushera.netlify.com">bushera</a></h6>
+
+<div id="social"><a href="mailto:ameamehame@gmail.com" ><img src="/images/gmail2.png"></a></div>
+<div id="social1"><a href="https://github.com/bushera/ameh" ><img src="/images/github.png"></a></div>
+<div id="social2"><a href="https://www.facebook.com/egwuh.amehkelvinace" ><img src="/images/facebk1.jpg"></a></div>
+<div id="social3"><a href="https://www.instagram.com/ameh_egwuh/" ><img src="/images/insta1.jpg"></a></div>
+
+</div>
  
 </body>
 
