--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!--CSS-->
     <link rel="stylesheet" href="/css/bootstrap.min.css">
 	<link rel="stylesheet" href="/css/uikit.min.css">
-	<!--<link rel="stylesheet" href="/css/materialize.min.css">-->
+	<link rel="stylesheet" href="/css/materialize.min.css">
 	
 	<!--jQuery-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
