--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 				<datalist id="type">
 					<option value="canvas"> canvas </option>
 				</datalist>
-			<input id="email-input" type="email" placeholder="email" required autofocus>
+			<input id="email-input" type="email" placeholder="email" required >
 			<input id="location-input" type="text" placeholder="state-country" required>
 			<button class="uk-button-default" type="submit">send</button>
 			</form>
@@ -84,7 +84,7 @@
 				<datalist id="type">
 					<option value="canvas"> canvas </option>
 				</datalist>
-			<input id="email-input" type="email" placeholder="email" required autofocus>
+			<input id="email-input" type="email" placeholder="email" required>
 			<input id="location-input" type="text" placeholder="state-country" required>
 			<button class="uk-button-default" type="submit">send</button>
 			</form>
@@ -111,7 +111,7 @@
 				<datalist id="type">
 					<option value="canvas"> canvas </option>
 				</datalist>
-			<input id="email-input" type="email" placeholder="email" required autofocus>
+			<input id="email-input" type="email" placeholder="email" required>
 			<input id="location-input" type="text" placeholder="state-country" required>
 			<button class="uk-button-default" type="submit">send</button>
 			</form>
@@ -140,7 +140,7 @@
 				<datalist id="type">
 					<option value="canvas"> canvas </option>
 				</datalist>
-			<input id="email-input" type="email" placeholder="email" required autofocus>
+			<input id="email-input" type="email" placeholder="email" required>
 			<input id="location-input" type="text" placeholder="state-country" required>
 			<button class="uk-button-default" type="submit">send</button>
 			</form>
@@ -169,7 +169,7 @@
 				<datalist id="type">
 					<option value="canvas"> canvas </option>
 				</datalist>
-			<input id="email-input" type="email" placeholder="email" required autofocus>
+			<input id="email-input" type="email" placeholder="email" required>
 			<input id="location-input" type="text" placeholder="state-country" required>
 			<button class="uk-button-default" type="submit">send</button>
 			</form>
