--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
 <body>
 	  <div id="preload-page">
-		<div id="preload-img" ><img id="preload-img" src="C:\Users\USER-PC\Desktop\BE\web designs\amestudio\images\preload-img.jpg"><div id="preloader"></div>
+		<div id="preload-img" ><img id="preload-img" src="/images/preload-img.jpg"><div id="preloader"></div>
 			<div id="progress1" class="progress">
 				<div style="background:white" class="indeterminate"></div>
 			</div>
