--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 	 
 	  <div id="carttoggle" class="uk-modal-container" uk-modal>
 		<div id="modal-dialog" class="uk-modal-dialog uk-position-small uk-position-center" uk-grid>
-			<form name="purchase request" data-netlify="true"  id="modal-form" method="POST">
+			<form name="aged request" data-netlify="true"  id="modal-form" method="POST">
 			<img  name="image" id="modal-img" data-src="/images/amestd0.jpg" width="40%" height="30%"  uk-img>
 			<h2 class="uk-position-small uk-position-center">PURCHASE REQUEST</h2>
 			<h3>AGED</h3>
@@ -79,7 +79,7 @@
 	 
 	 <div id="carttoggle1" class="uk-modal-container" uk-modal>
 		<div id="modal-dialog" class="uk-modal-dialog uk-position-small uk-position-center" uk-grid>
-			<form name="purchase request" data-netlify="true" id="modal-form" method="POST">
+			<form name="my african woman request" data-netlify="true" id="modal-form" method="POST">
 			<img name="image" id="modal-img" data-src="/images/amestd1.jpg" width="40%" height="30%"  uk-img>
 			<h2 class="uk-position-small uk-position-center">PURCHASE REQUEST</h2>
 			<h3>MY AFRICAN WOMAN</h3>
@@ -106,7 +106,7 @@
 	 
 	 <div id="carttoggle2" class="uk-modal-container" uk-modal>
 		<div id="modal-dialog" class="uk-modal-dialog uk-position-small uk-position-center" uk-grid>
-			<form name="purchase request" data-netlify="true" id="modal-form" method="POST">
+			<form name="self torture request" data-netlify="true" id="modal-form" method="POST">
 			<img name="image" id="modal-img" data-src="/images/amestd2.jpg" width="40%" height="30%"  uk-img>
 			<h2 class="uk-position-small uk-position-center">PURCHASE REQUEST</h2>
 			<h3>SELF TORTURE</h3>
@@ -135,7 +135,7 @@
 	 
 	 <div id="carttoggle3" class="uk-modal-container" uk-modal>
 		<div id="modal-dialog" class="uk-modal-dialog uk-position-small uk-position-center" uk-grid>
-			<form name="purchase request" data-netlify="true" id="modal-form" method="POST">
+			<form name="some words are noise request" data-netlify="true" id="modal-form" method="POST">
 			<img name="image" id="modal-img" data-src="/images/amestd3.jpg" width="40%" height="30%"  uk-img>
 			<h2 class="uk-position-small uk-position-center">PURCHASE REQUEST</h2>
 			<h3>SOME WORDS ARE NOISE</h3>
@@ -164,7 +164,7 @@
 	 
 	 <div id="carttoggle4" class="uk-modal-container" uk-modal>
 		<div id="modal-dialog" class="uk-modal-dialog uk-position-small uk-position-center" uk-grid>
-			<form name="purchase request" data-netlify="true" id="modal-form" method="POST">
+			<form name="some words are noise2 request" data-netlify="true" id="modal-form" method="POST">
 			<img name="image" id="modal-img" data-src="/images/amestd4.jpg" width="40%" height="30%"  uk-img>
 			<h2 class="uk-position-small uk-position-center">PURCHASE REQUEST</h2>
 			<h3>SOME WORDS ARE NOISE</h3>
