--- a/index.html
+++ b/index.html
@@ -51,12 +51,12 @@
 	 
 	  <div id="carttoggle" class="uk-modal-container" uk-modal>
 		<div id="modal-dialog" class="uk-modal-dialog uk-position-small uk-position-center" uk-grid>
-			<form name="aged request" data-netlify="true"  id="modal-form" method="POST">
+			<form subject="PURCHASE REQUEST FOR AGED" name="aged" data-netlify="true"  id="modal-form" method="POST">
 			<img  name="image" id="modal-img" data-src="/images/amestd0.jpg" width="40%" height="30%"  uk-img>
 			<h2 class="uk-position-small uk-position-center">PURCHASE REQUEST</h2>
 			<h3>AGED</h3>
 			<h4>2018</h4>
-			<input name="AGED-2018[]" id="type-input" type="text" placeholder="type" required list="type">
+			<input name="title->AGED-2018[]" id="type-input" type="text" placeholder="type" required list="type">
 				<datalist id="type">
 					<option value="canvas"> canvas </option>
 				</datalist>
@@ -79,12 +79,12 @@
 	 
 	 <div id="carttoggle1" class="uk-modal-container" uk-modal>
 		<div id="modal-dialog" class="uk-modal-dialog uk-position-small uk-position-center" uk-grid>
-			<form name="my african woman request" data-netlify="true" id="modal-form" method="POST">
+			<form subject="PURCHASE REQUEST FOR MY AFRICAN WOMAN" name="my african woman" data-netlify="true" id="modal-form" method="POST">
 			<img name="image" id="modal-img" data-src="/images/amestd1.jpg" width="40%" height="30%"  uk-img>
 			<h2 class="uk-position-small uk-position-center">PURCHASE REQUEST</h2>
 			<h3>MY AFRICAN WOMAN</h3>
 			<h4>2017</h4>
-			<input name="MY AFRICAN WOMAN-2017[]" id="type-input" type="text" placeholder="type" required list="type">
+			<input name="title->MY AFRICAN WOMAN-2017[]" id="type-input" type="text" placeholder="type" required list="type">
 				<datalist id="type">
 					<option value="canvas"> canvas </option>
 				</datalist>
@@ -106,12 +106,12 @@
 	 
 	 <div id="carttoggle2" class="uk-modal-container" uk-modal>
 		<div id="modal-dialog" class="uk-modal-dialog uk-position-small uk-position-center" uk-grid>
-			<form name="self torture request" data-netlify="true" id="modal-form" method="POST">
+			<form subject="PURCHASE REQUEST FOR SELF TORTURE" name="self torture" data-netlify="true" id="modal-form" method="POST">
 			<img name="image" id="modal-img" data-src="/images/amestd2.jpg" width="40%" height="30%"  uk-img>
 			<h2 class="uk-position-small uk-position-center">PURCHASE REQUEST</h2>
 			<h3>SELF TORTURE</h3>
 			<h4>2017</h4>
-			<input  name="SELF TORTURE-2017[]" id="type-input" type="text" placeholder="type" required list="type">
+			<input  name="title->SELF TORTURE-2017[]" id="type-input" type="text" placeholder="type" required list="type">
 				<datalist id="type">
 					<option value="canvas"> canvas </option>
 				</datalist>
@@ -135,12 +135,12 @@
 	 
 	 <div id="carttoggle3" class="uk-modal-container" uk-modal>
 		<div id="modal-dialog" class="uk-modal-dialog uk-position-small uk-position-center" uk-grid>
-			<form name="some words are noise request" data-netlify="true" id="modal-form" method="POST">
+			<form subject="PURCHASE REQUEST FOR SOME WORDS ARE NOISE" name="some words are noise" data-netlify="true" id="modal-form" method="POST">
 			<img name="image" id="modal-img" data-src="/images/amestd3.jpg" width="40%" height="30%"  uk-img>
 			<h2 class="uk-position-small uk-position-center">PURCHASE REQUEST</h2>
 			<h3>SOME WORDS ARE NOISE</h3>
 			<h4>2019</h4>
-			<input id="type-input" type="text" placeholder="type" required list="type">
+			<input name="title->SOME WORDS ARE NOISE-2019[]" id="type-input" type="text" placeholder="type" required list="type">
 				<datalist id="type">
 					<option value="canvas"> canvas </option>
 				</datalist>
@@ -164,12 +164,12 @@
 	 
 	 <div id="carttoggle4" class="uk-modal-container" uk-modal>
 		<div id="modal-dialog" class="uk-modal-dialog uk-position-small uk-position-center" uk-grid>
-			<form name="some words are noise2 request" data-netlify="true" id="modal-form" method="POST">
+			<form subject="PURCHASE REQUEST FOR SOME WORDS ARE NOISE2" name="some words are noise2" data-netlify="true" id="modal-form" method="POST">
 			<img name="image" id="modal-img" data-src="/images/amestd4.jpg" width="40%" height="30%"  uk-img>
 			<h2 class="uk-position-small uk-position-center">PURCHASE REQUEST</h2>
 			<h3>SOME WORDS ARE NOISE</h3>
 			<h4>2019</h4>
-			<input name="SOME WORDS ARE NOISE-2019[]" id="type-input" type="text" placeholder="type" list="type" required >
+			<input name="title->SOME WORDS ARE NOISE-2019[]" id="type-input" type="text" placeholder="type" list="type" required >
 				<datalist id="type">
 					<option value="canvas"> canvas </option>
 				</datalist>
