--- a/index.html
+++ b/index.html
@@ -16,9 +16,11 @@
 	<link rel="stylesheet" href="/css/materialize.min.css">
 	
 	<!--jQuery-->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     
-    <script src="https://code.jquery.com/jquery-3.1.1.js"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"
+			integrity="sha256-9/aliU8dGd2tb60SsuvixeV4y/faTqgFtohetphbbj0="
+			crossorigin="anonyous"></script>
 	
 	
 	<link rel="stylesheet" href="/css/styles.css">
@@ -56,7 +58,7 @@
 			<h2 class="uk-position-small uk-position-center">PURCHASE REQUEST</h2>
 			<h3>AGED</h3>
 			<h4>2018</h4>
-			<input name="title->AGED-2018[]" id="type-input" type="text" placeholder="type" required list="type">
+			<input name="title--AGED-2018[]" id="type-input" type="text" placeholder="type" required list="type">
 				<datalist id="type">
 					<option value="canvas"> canvas </option>
 				</datalist>
@@ -84,7 +86,7 @@
 			<h2 class="uk-position-small uk-position-center">PURCHASE REQUEST</h2>
 			<h3>MY AFRICAN WOMAN</h3>
 			<h4>2017</h4>
-			<input name="title->MY AFRICAN WOMAN-2017[]" id="type-input" type="text" placeholder="type" required list="type">
+			<input name="title--MY AFRICAN WOMAN-2017[]" id="type-input" type="text" placeholder="type" required list="type">
 				<datalist id="type">
 					<option value="canvas"> canvas </option>
 				</datalist>
@@ -111,7 +113,7 @@
 			<h2 class="uk-position-small uk-position-center">PURCHASE REQUEST</h2>
 			<h3>SELF TORTURE</h3>
 			<h4>2017</h4>
-			<input  name="title->SELF TORTURE-2017[]" id="type-input" type="text" placeholder="type" required list="type">
+			<input  name="title--SELF TORTURE-2017[]" id="type-input" type="text" placeholder="type" required list="type">
 				<datalist id="type">
 					<option value="canvas"> canvas </option>
 				</datalist>
@@ -140,7 +142,7 @@
 			<h2 class="uk-position-small uk-position-center">PURCHASE REQUEST</h2>
 			<h3>SOME WORDS ARE NOISE</h3>
 			<h4>2019</h4>
-			<input name="title->SOME WORDS ARE NOISE-2019[]" id="type-input" type="text" placeholder="type" required list="type">
+			<input name="title--SOME WORDS ARE NOISE-2019[]" id="type-input" type="text" placeholder="type" required list="type">
 				<datalist id="type">
 					<option value="canvas"> canvas </option>
 				</datalist>
@@ -169,7 +171,7 @@
 			<h2 class="uk-position-small uk-position-center">PURCHASE REQUEST</h2>
 			<h3>SOME WORDS ARE NOISE</h3>
 			<h4>2019</h4>
-			<input name="title->SOME WORDS ARE NOISE-2019[]" id="type-input" type="text" placeholder="type" list="type" required >
+			<input name="title--SOME WORDS ARE NOISE-2019[]" id="type-input" type="text" placeholder="type" list="type" required >
 				<datalist id="type">
 					<option value="canvas"> canvas </option>
 				</datalist>
