--- a/index.html
+++ b/index.html
@@ -191,38 +191,53 @@
  
  
 <div id="lastbar">
-<h6 id="h61"><b>.c</b> 2020 copyright</h6>
-<h6 id="h62">Ameh Egwuh</h6>
-<h6 id="h63">Get updated on all our recent news of latest<br></br>works release and exhibitions by subscribing to<br></br>our newsletter</h6>
+<h6 id="h61" class="uk-position-absolute uk-position-center"><b>.c</b> 2020 copyright</h6>
+<h6 id="h62" class="uk-position-absolute uk-position-center">Ameh Egwuh</h6>
+<h6 id="h63" class="uk-position-absolute uk-position-center">Get updated on all our recent news of latest<br></br>works release and exhibitions by subscribing to<br></br>our newsletter</h6>
 <form>
-<input id="lastbar-subscribe" class="uk-input" type="email" placeholder="Your email goes here" required>
+<input id="lastbar-subscribe" class="uk-input uk-position-absolute uk-position-center" type="email" placeholder="Your email goes here" required>
 </form>
 </div>
 
-<a id="offslide-btn" href="#offslide" tabindex="0" style="position:fixed; bottom:2%; left:-2%;" class="uk-button uk-button-small uk-margin-small-right pulse"uk-toggle><span class="uk-icon-link" style="color:teal" uk-icon="icon:menu; ratio:.9;"></span></a>
+<a id="offslide-btn" href="#"   style="position:fixed; bottom:2%; left:-2%; display:block;" class="uk-button uk-button-small uk-margin-small-right pulse"><span class="uk-icon-link" style="color:teal" uk-icon="icon:menu; ratio:1.2;"></span></a>
 	
 		<div id="offslide"class="uk-overflow-auto">
-			<h1>Ameh Egwuh</h1>
+			<h1 id="offslide-h1">Ameh Egwuh</h1>
 			
 			
-			<div uk-scrollspy="cls:uk-animation-fade; target:>.holder; delay:300; repeat:true;">
-			<div id="hr1" class=" holder uk-visible-toggle uk-overflow-hidden uk-light" tabindex="-1" uk-slideshow="autoplay:true; autoplay-interval:3000; pause-on-hover:true; animation:uk-animation-fade; duration:500;">
+			<div uk-scrollspy="cls:uk-animation-fade; target:>.holder; delay:100; repeat:true;">
+			<div id="hr1" class=" holder uk-visible-toggle uk-overflow-hidden uk-light" tabindex="-1" uk-slideshow="autoplay:true; velocity:0.1000; autoplay-interval:1000; pause-on-hover:true;">
 			
 				<ul class="uk-slideshow-items">
 					<li>
-						<img onclick="alert('welcome in') "src="C:\Users\USER-PC\Desktop\BE\web designs\amestudio\images\original\amestd4.jpg" style="width:100%; height:100%;">
+						<img onclick="alert('welcome in') "src="/images/original/amestd4.jpg" style="width:100%; height:100%;">
+						<div style="position:absolute; height:5%; bottom:0%; width:100%" class="uk-overlay uk-overlay-primary">
+							<p>dfehdfdfg </p>
+						</div>
 					</li>
 					<li>
-						<img src="C:\Users\USER-PC\Desktop\BE\web designs\amestudio\images\original\amestd8.jpg" style="width:100%; height:100%;" >
+						<img src="/images/original/amestd8.jpg" style="width:100%; height:100%;" >
+						<div style="position:absolute; height:5%; bottom:0%; width:100%" class="uk-overlay uk-overlay-primary">
+							<p>dfehdfdfg </p>
+						</div>
 					</li>
 					<li >
-						<img src="C:\Users\USER-PC\Desktop\BE\web designs\amestudio\images\original\amestd10.jpg" style="width:100%; height:100%;">
+						<img src="/images/original/amestd10.jpg" style="width:100%; height:100%;">
+						<div style="position:absolute; height:5%; bottom:0%; width:100%" class="uk-overlay uk-overlay-primary">
+							<p>nbvxvc </p>
+						</div>
 					</li>
 					<li >
-						<img src="C:\Users\USER-PC\Desktop\BE\web designs\amestudio\images\original\amestd6.jpg" style="width:100%; height:100%;">
+						<img src="/images/original/amestd6.jpg" style="width:100%; height:100%;">
+						<div style="position:absolute; height:5%; bottom:0%; width:100%" class="uk-overlay uk-overlay-primary">
+							<p>hgfvgfhghg</p>
+						</div>
 					</li>
 					<li >
-						<img src="C:\Users\USER-PC\Desktop\BE\web designs\amestudio\images\original\amestd3.jpg" style="width:100%; height:100%;">
+						<img src="/images/original/amestd3.jpg" style="width:100%; height:100%;">
+						<div style="position:absolute; height:0%; bottom:0%; width:100%" class="uk-overlay uk-overlay-primary">
+							<p>xvxzccxxv</p>
+						</div>
 					</li>
 				</ul>
 			</div>
@@ -231,8 +246,8 @@
 			
 			<div  class="switch">
 				<label>
-				<input type="checkbox">
-				<span class="lever"></span>
+				<input  type="checkbox">
+				<span style="background:black;" class="lever"></span>
 				</label>
 			</div>
 			
@@ -241,14 +256,16 @@
 				<div id="toplink">
 					<a id="home" href="amehegwuh.netlify.com" >home</a><br>
 					<a id="exhibition" href="amestudio.netlify.com" >exhibition</a><br>
-					<a id="works" href="#" >works<span class="uk-icon-link" uk-icon="icon:chevron-double-right;" </span></a><br>
+					<a id="works" href="#">works</a><br>
 					<a id="contact" href="#" >contact</a><br>
 					<a id="bio" href="#" >bio</a><br>
 				</div>
-			<button id="offslide-close"  class="uk-offslide-close uk-close-small" type="button" style="text-decoration:none;" uk-close></button>
+				
+			<a id="offslide-close"  class="uk-close-small"  style="text-decoration:none; position:absolute; right:8%; top:95%;" uk-close></a>
 			 
 	
 		</div>
+		
 		
 		
 	<!--UKIT WORKS-->
