--- a/index.html
+++ b/index.html
@@ -210,31 +210,31 @@
 			
 				<ul class="uk-slideshow-items">
 					<li>
-						<img onclick="alert('welcome in') "src="/images/original/amestd4.jpg" style="width:100%; height:100%;">
+						<img onclick="alert('welcome in')" data-src="/images/original/amestd4.jpg" style="width:100%; height:100%;" uk-img>
 						<div style="position:absolute; height:5%; bottom:0%; width:100%" class="uk-overlay uk-overlay-primary">
 							<p>dfehdfdfg </p>
 						</div>
 					</li>
 					<li>
-						<img src="/images/original/amestd8.jpg" style="width:100%; height:100%;" >
+						<img data-src="/images/original/amestd8.jpg" style="width:100%; height:100%;" uk-img>
 						<div style="position:absolute; height:5%; bottom:0%; width:100%" class="uk-overlay uk-overlay-primary">
 							<p>dfehdfdfg </p>
 						</div>
 					</li>
 					<li >
-						<img src="/images/original/amestd10.jpg" style="width:100%; height:100%;">
+						<img data-src="/images/original/amestd10.jpg" style="width:100%; height:100%;" uk-img>
 						<div style="position:absolute; height:5%; bottom:0%; width:100%" class="uk-overlay uk-overlay-primary">
 							<p>nbvxvc </p>
 						</div>
 					</li>
 					<li >
-						<img src="/images/original/amestd6.jpg" style="width:100%; height:100%;">
+						<img data-src="/images/original/amestd6.jpg" style="width:100%; height:100%;" uk-img>
 						<div style="position:absolute; height:5%; bottom:0%; width:100%" class="uk-overlay uk-overlay-primary">
 							<p>hgfvgfhghg</p>
 						</div>
 					</li>
 					<li >
-						<img src="/images/original/amestd3.jpg" style="width:100%; height:100%;">
+						<img data-src="/images/original/amestd3.jpg" style="width:100%; height:100%;" uk-img>
 						<div style="position:absolute; height:0%; bottom:0%; width:100%" class="uk-overlay uk-overlay-primary">
 							<p>xvxzccxxv</p>
 						</div>
