--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 			<h2 class="uk-position-small uk-position-center">PURCHASE REQUEST</h2>
 			<h3>AGED</h3>
 			<h4>2018</h4>
-			<input name="title-AGED-2018[]" id="type-input" type="text" placeholder="type" required list="type">
+			<input name="title--AGED-2018[]" id="type-input" type="text" placeholder="type" required list="type">
 				<datalist id="type">
 					<option value="canvas"> canvas </option>
 				</datalist>
@@ -210,31 +210,31 @@
 			
 				<ul class="uk-slideshow-items">
 					<li>
-						<img onclick="alert('welcome in')" data-src="/images/original/amestd4.jpg" style="width:100%; height:100%;" uk-img>
+						<img onclick="alert('welcome in')" data-src="/Original/amestd4.jpg" style="width:100%; height:100%;" uk-img>
 						<div style="position:absolute; height:5%; bottom:0%; width:100%" class="uk-overlay uk-overlay-primary">
 							<p>dfehdfdfg </p>
 						</div>
 					</li>
 					<li>
-						<img data-src="/images/original/amestd8.jpg" style="width:100%; height:100%;" uk-img>
+						<img data-src="/Original/amestd8.jpg" style="width:100%; height:100%;" uk-img>
 						<div style="position:absolute; height:5%; bottom:0%; width:100%" class="uk-overlay uk-overlay-primary">
 							<p>dfehdfdfg </p>
 						</div>
 					</li>
 					<li >
-						<img data-src="/images/original/amestd10.jpg" style="width:100%; height:100%;" uk-img>
+						<img data-src="/Original/amestd10.jpg" style="width:100%; height:100%;" uk-img>
 						<div style="position:absolute; height:5%; bottom:0%; width:100%" class="uk-overlay uk-overlay-primary">
 							<p>nbvxvc </p>
 						</div>
 					</li>
 					<li >
-						<img data-src="/images/original/amestd6.jpg" style="width:100%; height:100%;" uk-img>
+						<img data-src="/Original/amestd6.jpg" style="width:100%; height:100%;" uk-img>
 						<div style="position:absolute; height:5%; bottom:0%; width:100%" class="uk-overlay uk-overlay-primary">
 							<p>hgfvgfhghg</p>
 						</div>
 					</li>
 					<li >
-						<img data-src="/images/original/amestd3.jpg" style="width:100%; height:100%;" uk-img>
+						<img data-src="/Original/amestd3.jpg" style="width:100%; height:100%;" uk-img>
 						<div style="position:absolute; height:0%; bottom:0%; width:100%" class="uk-overlay uk-overlay-primary">
 							<p>xvxzccxxv</p>
 						</div>
@@ -273,7 +273,7 @@
 		
 		<div uk-lightbox="video-autoplay:true;">
 			<div id="video-cover">
-			<a id="video-box" href="C:\Users\USER-PC\Desktop\BE\web designs\amestudio\video\amestd.mp4"  data-type="video" data-caption="rele-YC2020"><span class="uk-icon-link" uk-icon="icon:play-circle; ratio:.75;" style="color:white;"></span><a>
+			<a id="video-box" href="/video/amestd.mp4"  data-type="video" data-caption="rele-YC2020"><span class="uk-icon-link" uk-icon="icon:play-circle; ratio:.75;" style="color:white;"></span><a>
 			</div>
 		</div>
 		
