--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
 			<h1 id="offslide-h1">Ameh Egwuh</h1>
 			
 			
-			<div uk-scrollspy="cls:uk-animation-fade; target:>li; delay:100; repeat:true;">
+			<div uk-scrollspy="cls:uk-animation-fade; target:>.holder; delay:100; repeat:true;">
 			<div id="hr1" class=" holder uk-visible-toggle uk-overflow-hidden uk-light" tabindex="-1" uk-slideshow="autoplay:true; velocity:0.1000; autoplay-interval:1000; pause-on-hover:true;">
 			
 				<ul class="uk-slideshow-items">
