--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 	 </div>
     
 
-    
+<main>
 	<div uk-scrollspy="cls:uk-animation-fade; target:>.holder; delay:400; repeat:true;">
      <div id="pichold"  class="holder">
      <img data-src="/images/amestd0.jpg" uk-img></img>
@@ -199,7 +199,7 @@
 </form>
 </div>
 
-<a id="offslide-btn" href="#"   style="position:fixed; bottom:2%; left:-2%; display:block;" class="uk-button uk-button-small uk-margin-small-right pulse"><span class="uk-icon-link" style="color:teal" uk-icon="icon:menu; ratio:1.2;"></span></a>
+<a id="offslide-btn" href="#"   style="position:fixed; bottom:.5%; left:-2%; display:block;" class="uk-button uk-button-small uk-margin-small-right pulse"><span class="uk-icon-link" style="color:teal" uk-icon="icon:menu; ratio:1.2;"></span></a>
 	
 		<div id="offslide"class="uk-overflow-auto">
 			<h1 id="offslide-h1">Ameh Egwuh</h1>
@@ -300,7 +300,7 @@
 	<script src="/js/materialize.min.js"></script>
 
 </div>
-	
+</main>	
 </body>
 
 
