--- a/index.html
+++ b/index.html
@@ -190,14 +190,9 @@
  
  
  
-<div id="lastbar">
-<h6 id="h61" class="uk-position-absolute uk-position-center"><b>.c</b> 2020 copyright</h6>
-<h6 id="h62" class="uk-position-absolute uk-position-center">Ameh Egwuh</h6>
-<h6 id="h63" class="uk-position-absolute uk-position-center">Get updated on all our recent news of latest<br></br>works release and exhibitions by subscribing to<br></br>our newsletter</h6>
-<form>
-<input id="lastbar-subscribe" class="uk-input uk-position-absolute uk-position-center" type="email" placeholder="Your email goes here" required>
-</form>
-</div>
+<h6 id="h61">&copy; 2018-2020</h6>
+<h6 id="h62">Ameh Egwuh</h6>
+
 
 <a id="offslide-btn" href="#"   style="position:fixed; bottom:.5%; left:-2%; display:block;" class="uk-button uk-button-small uk-margin-small-right pulse"><span class="uk-icon-link" style="color:teal" uk-icon="icon:menu; ratio:1.2;"></span></a>
 	
