--- a/index.html
+++ b/index.html
@@ -251,7 +251,13 @@
 				<div id="toplink">
 					<a id="home" href="amehegwuh.netlify.com" >home</a><br>
 					<a id="exhibition" href="amestudio.netlify.com" >exhibition</a><br>
-					<a id="works" href="#">works</a><br>
+					<a id="works"  href="#">works</a>
+					<div id="down">
+						<a id="mob-year" href="file:///C:/Users/USER-PC/Desktop/BE/web%20designs/ameyear.html" >year</a>
+						<a id="mob-series" href="amestudio.netlify.com" >series</a>
+					</div>
+					<span id="works-span" style="font-size:6px; color:teal;" class="glyphicon glyphicon-plus"></span>
+					<span id="works-span2" style="font-size:6px; color:red;" class="glyphicon glyphicon-plus"></span>
 					<a id="contact" href="#" >contact</a><br>
 					<a id="bio" href="#" >bio</a><br>
 				</div>
