--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
 			
 			
 			<div uk-scrollspy="cls:uk-animation-fade; target:>.holder; delay:100; repeat:true;">
-			<div id="hr1" class=" holder uk-visible-toggle uk-overflow-hidden uk-light" tabindex="-1" uk-slideshow="autoplay:true; velocity:0.1000; autoplay-interval:1000; pause-on-hover:true;">
+			<div id="hr1" class=" holder uk-visible-toggle uk-overflow-hidden uk-light" tabindex="-1" uk-slideshow="autoplay:true; velocity:0.1000; autoplay-interval:1000; pause-on-hover:true;  min-height:150; max-height:400;">
 			
 				<ul class="uk-slideshow-items">
 					<li>
