--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
 	<link rel="stylesheet" href="/css/uikit.min.css">
 	<link rel="stylesheet" href="/css/materialize.min.css">
 	
+	<!--<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.0/css/bootstrap.min.css">-->
+	
+	
 	<!--jQuery-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     
@@ -239,11 +242,11 @@
 			</div>
 			
 			
-			<div  class="switch">
-				<label>
-				<input  type="checkbox">
-				<span style="background:black;" class="lever"></span>
-				</label>
+			<div id="darkmode" class="container">
+				<div  class="custom-control custom-switch">
+				<input  type="checkbox" class="custom-control-input" id="darkswitch">
+				<label class="custom-control-label" for="darkswitch"></label>
+				</div>
 			</div>
 			
 			
