--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
 <h6 id="h62">Ameh Egwuh</h6>
 
 
-<a id="offslide-btn" href="#"   style="position:fixed; bottom:.5%; left:-2%; display:block;" class="uk-button uk-button-small uk-margin-small-right pulse"><span class="uk-icon-link" style="color:teal" uk-icon="icon:menu; ratio:1.2;"></span></a>
+<a id="offslide-btn" href="#"   style="position:fixed; bottom:.5%; left:-2%;" class="uk-button uk-button-small uk-margin-small-right pulse"><span class="uk-icon-link" style="color:teal" uk-icon="icon:menu; ratio:1.2;"></span></a>
 	
 		<div id="offslide"class="uk-overflow-auto">
 			<h1 id="offslide-h1">Ameh Egwuh</h1>
