--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
 		
 		<div uk-lightbox="video-autoplay:true;">
 			<div id="video-cover">
-			<a id="video-box" href="https://youtu.be/K6XFJRkU-JY"  data-type="video" data-caption="rele-YC2020"><span class="uk-icon-link" uk-icon="icon:play-circle; ratio:.75;" style="color:white;"></span><a>
+			<a id="video-box" href="https://youtu.be/K6XFJRkU-JY"><span class="uk-icon-link" uk-icon="icon:play-circle; ratio:.75;" style="color:white;"></span><a>
 			</div>
 		</div>
 		
