--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 	 
 	  <div id="carttoggle" class="uk-modal-container" uk-modal>
 		<div id="modal-dialog" class="uk-modal-dialog uk-position-small uk-position-center" uk-grid>
-			<form subject="PURCHASE REQUEST FOR AGED" name="aged" data-netlify="true"  id="modal-form" method="POST">
+			<form action="/success-page" subject="PURCHASE REQUEST FOR AGED" name="aged" data-netlify="true"  id="modal-form" method="POST">
 			<img  name="image" id="modal-img" data-src="/images/amestd0.jpg" width="40%" height="30%"  uk-img>
 			<h2 class="uk-position-small uk-position-center">PURCHASE REQUEST</h2>
 			<h3>AGED</h3>
@@ -119,7 +119,7 @@
 	 
 	 <div id="carttoggle1" class="uk-modal-container" uk-modal>
 		<div id="modal-dialog" class="uk-modal-dialog uk-position-small uk-position-center" uk-grid>
-			<form subject="PURCHASE REQUEST FOR MY AFRICAN WOMAN" name="my african woman" data-netlify="true" id="modal-form" method="POST">
+			<form action="/success-page" subject="PURCHASE REQUEST FOR MY AFRICAN WOMAN" name="my african woman" data-netlify="true" id="modal-form" method="POST">
 			<img name="image" id="modal-img" data-src="/images/amestd1.jpg" width="40%" height="30%"  uk-img>
 			<h2 class="uk-position-small uk-position-center">PURCHASE REQUEST</h2>
 			<h3>MY AFRICAN WOMAN</h3>
@@ -146,7 +146,7 @@
 	 
 	 <div id="carttoggle2" class="uk-modal-container" uk-modal>
 		<div id="modal-dialog" class="uk-modal-dialog uk-position-small uk-position-center" uk-grid>
-			<form subject="PURCHASE REQUEST FOR SELF TORTURE" name="self torture" data-netlify="true" id="modal-form" method="POST">
+			<form action="/success-page" subject="PURCHASE REQUEST FOR SELF TORTURE" name="self torture" data-netlify="true" id="modal-form" method="POST">
 			<img name="image" id="modal-img" data-src="/images/amestd2.jpg" width="40%" height="30%"  uk-img>
 			<h2 class="uk-position-small uk-position-center">PURCHASE REQUEST</h2>
 			<h3>SELF TORTURE</h3>
@@ -175,7 +175,7 @@
 	 
 	 <div id="carttoggle3" class="uk-modal-container" uk-modal>
 		<div id="modal-dialog" class="uk-modal-dialog uk-position-small uk-position-center" uk-grid>
-			<form subject="PURCHASE REQUEST FOR SOME WORDS ARE NOISE" name="some words are noise" data-netlify="true" id="modal-form" method="POST">
+			<form action="/success-page" subject="PURCHASE REQUEST FOR SOME WORDS ARE NOISE" name="some words are noise" data-netlify="true" id="modal-form" method="POST">
 			<img name="image" id="modal-img" data-src="/images/amestd3.jpg" width="40%" height="30%"  uk-img>
 			<h2 class="uk-position-small uk-position-center">PURCHASE REQUEST</h2>
 			<h3>SOME WORDS ARE NOISE</h3>
@@ -204,7 +204,7 @@
 	 
 	 <div id="carttoggle4" class="uk-modal-container" uk-modal>
 		<div id="modal-dialog" class="uk-modal-dialog uk-position-small uk-position-center" uk-grid>
-			<form subject="PURCHASE REQUEST FOR SOME WORDS ARE NOISE2" name="some words are noise2" data-netlify="true" id="modal-form" method="POST">
+			<form action="/success-page" subject="PURCHASE REQUEST FOR SOME WORDS ARE NOISE2" name="some words are noise2" data-netlify="true" id="modal-form" method="POST">
 			<img name="image" id="modal-img" data-src="/images/amestd4.jpg" width="40%" height="30%"  uk-img>
 			<h2 class="uk-position-small uk-position-center">PURCHASE REQUEST</h2>
 			<h3>SOME WORDS ARE NOISE</h3>
