--- a/index.html
+++ b/index.html
@@ -46,6 +46,10 @@
     
 
 <main>
+
+	<img  id="top-img" data-src="/images/tripod.png" uk-img>
+	<h1>PAINTINGS</h1>
+
 <div id="menu-bar" uk-sticky="animation:uk-animation-slide-top; sel-target: .uk-navbar-container; cls-active:uk-navbar-sticky; cls-inactive:uk-navbar-transparent uk-light; top:150">
 		<nav class="uk-navbar-container">
 			<div class="uk-navbar-center uk-container uk-container-expand">
@@ -232,9 +236,8 @@
 <h6 id="h62">Ameh Egwuh</h6>
 
 
-<a id="offslide-btn" href="#"   style="position:fixed; bottom:.5%; left:-2%;" class="uk-button uk-button-small uk-margin-small-right pulse"><span class="uk-icon-link" style="color:teal" uk-icon="icon:menu; ratio:1.2;"></span></a>
-	
-		<div id="offslide"class="uk-overflow-auto">
+
+		   <div id="offslide"class="uk-overflow-auto">
 			<h1 id="offslide-h1">Ameh Egwuh</h1>
 			
 			
@@ -310,25 +313,26 @@
 	<!--UKIT WORKS-->
 	
 		
+	<div id="showbar">
 		<div uk-lightbox="video-autoplay:true;">
 			<div id="video-cover">
-			<a id="video-box" href="https://youtu.be/K6XFJRkU-JY"><span class="uk-icon-link" uk-icon="icon:play-circle; ratio:.75;" style="color:white;"></span><a>
+			<a id="video-box" href="https://youtu.be/K6XFJRkU-JY"  data-caption="rele-YC2020"><span class="uk-icon-link" uk-icon="icon:play-circle; ratio:.75;" style="color:white;"></span></a>
 			</div>
 		</div>
 		
 		<div id="mail-cover">
-        <a id="mail" href="mailto:ameamehame@gmail.com" ><span class="uk-icon-link" uk-icon="icon:google; ratio:.75;" style="color:white;"></span><a>	
+        <a id="mail" href="mailto:ameamehame@gmail.com" ><span class="uk-icon-link" uk-icon="icon:google; ratio:.75;" style="color:white;"></span></a>	
 		</div>
 		<div id="facebook-cover">
-		<a id="facebook-social" href="https://www.facebook.com/egwuh.amehkelvinace" ><span class="uk-icon-link" uk-icon="icon:facebook; ratio:.75;" style="color:white;"></span><a>
+		<a id="facebook-social" href="https://www.facebook.com/egwuh.amehkelvinace" ><span class="uk-icon-link" uk-icon="icon:facebook; ratio:.75;" style="color:white;"></span></a>
 		</div>
 		<div id="instagram-cover">
-		<a id="instagram-social" href="https://www.instagram.com/ameh_egwuh/" ><span class="uk-icon-link" uk-icon="icon:instagram; ratio:.75;" style="color:white;"></span><a>	
+		<a id="instagram-social" href="https://www.instagram.com/ameh_egwuh/" ><span class="uk-icon-link" uk-icon="icon:instagram; ratio:.75;" style="color:white;"></span></a>	
 		</div>
-		
-		<div id="top-scroll" uk-scroll>
-        <a id="top" href="#pichold" ><span class="uk-icon-link" uk-icon="icon:arrow-up; ratio:1.5;" style="color:white;"></span><a>	
+		<div id="menu-cover">
+		<a id="offslide-btn" href="#"  ><span class="uk-icon-link" style="color:white" uk-icon="icon:menu; ratio:.75;"></span></a>
 		</div>
+	</div>	
 		
 		
 
