--- a/index.html
+++ b/index.html
@@ -301,8 +301,9 @@
 					<a id="bio" href="#" >bio</a><br>
 				</div>
 				
-			<a id="offslide-close"  class="uk-close-small"  style="text-decoration:none; position:absolute; right:8%; top:95%;" uk-close></a>
-			 
+			<div id="close-cover">
+			<a id="offslide-close"  class="uk-close-small" ><span class="uk-icon-link" style="color:white" uk-icon="icon:menu; ratio:.75;"></span></a>
+			</div>
 	
 		</div>
 		
@@ -329,6 +330,9 @@
 		</div>
 		<div id="menu-cover">
 		<a id="offslide-btn" href="#"  ><span class="uk-icon-link" style="color:white" uk-icon="icon:menu; ratio:.75;"></span></a>
+		</div>
+		<div id="close-trigger">
+		<a id="offslide-trigger" ><span class="uk-icon-link" style="color:white" uk-icon="icon:menu; ratio:.75;"></span></a>
 		</div>
 	</div>	
 		
