--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 		</div>
 
 		<p id="preloader-text-desktop"> |Artworks </p>
-		<p id="preloader-text-mobile"> |Artworks </p>
+		
 			
 	</div>
     
@@ -106,7 +106,10 @@
 
 	<div id="artworks-house" uk-scrollspy="cls:uk-animation-fade; target:>.holder; delay:250; repeat:true;">
 	 
+		<div class="navbar-house">
+		<p id="menu-name">.AME</p>
 		<a id="menu-btn" href="#"  ><img src="/images/gg_menu-left.svg"/></a>
+		</div>
 	
 		
 	<div id="art1"  class="holder">
